--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@nestjs/common": "^9.4.0",
     "@nestjs/core": "^9.0.5",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-fastify": "^9.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
   },
@@ -29,7 +29,6 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.0.3",
     "@types/supertest": "^2.0.12",
