--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@fastify/static": "^6.10.1",
     "@nestjs/common": "^9.4.0",
     "@nestjs/core": "^9.0.5",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-fastify": "^9.4.0",
     "@nestjs/swagger": "^6.3.0",
+    "@prisma/client": "^4.14.0",
+    "bcrypt": "^5.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
   },
@@ -32,6 +35,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/babel__core": "^7.20.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.0.3",
     "@types/supertest": "^2.0.12",
@@ -42,6 +46,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.2",
     "prettier": "^2.7.1",
+    "prisma": "^4.14.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.5",
